chore(fix-style): ajeitando "background-size" para deixar a animação do background mais fluida e melhorar a visibilidade das cores.

--- a/src/app/paraqueme/paraqueme.module.css
+++ b/src/app/paraqueme/paraqueme.module.css
@@ -2,8 +2,8 @@
   padding-top: 90px;
   background: linear-gradient(135deg, #1f67a6e4 0%, #3fb63dda 100%);
   font-family: Arial, Helvetica, sans-serif;
-  background-size: 400% 400%;
-  animation: gradientShift 15s ease infinite;
+  animation: gradientShift 10s ease infinite;
+  background-size: 200% 200%;
 }
 
 @keyframes gradientShift {
